# socialite

./: .gitignore  ARCHITECTURE.md  CODING_STANDARDS.md  DEPLOYMENT_PLAN.md  GIT_STRATEGY.md  PLAN.md  README.md  TASK_BREAKDOWN.md  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  requirements.txt  test_runner.ps1
ai_brain/: mistral_api_interface.py
animation/: Dockerfile  build_scene.py  pyproject.toml  requirements.txt  timeline.md
animation/templates/: scene_template.html.j2
audio/: speech_to_text.py
config/: lumina_person.txt
data_ingestion/: knowledge_base.code-workspace  solar_data.py
database/: README.md
notes/: TECH.md  TECHFFLOW.md
ollama-script/: Dockerfile  PROMPT.md  generate_script.py  pyproject.toml
planets/: Dockerfile  get_horoscope.py  planet_positions.py  pyproject.toml  requirements.txt
planets/output_horoscopes/: horoscope_planet_positions_2025-05-06_15-10-52_Gemini.json
social_media/: content_scheduler.py
streaming/: stream_manager.py
tests/: test_database_embedding.py
tts/: Dockerfile  pyproject.toml
web_frontend/: lumina_stage.html
web_frontend/css/: lumina.css
web_frontend/js/: script.js
