[tool.poetry]
name = "astrotoon-core"
version = "0.1.0"
description = "Core dependencies for AstroToon project"
authors = ["AstroToon Team <team@astrotoon.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
loguru = "^0.7"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"