[tool.poetry]
name = "animation"
version = "0.1.0"
description = "Scene animation pipeline"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.42.0"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.0"
pydantic = "^2.7"
loguru = "^0.7"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"