[tool.poetry]
name = "planets"
version = "0.1.0"
description = "Astrological calculation engine"

[tool.poetry.dependencies]
python = "^3.10"
skyfield = "1.46"
numpy = "1.26.4"
pydantic = "^2.7"
loguru = "^0.7"
pyswisseph = "^2.10.3.2"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"